
package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tijanadmi/bookings_backend/pb";

message Reservation {
    required int32 room_id = 1;
    required string first_name = 2;
    optional string last_name = 3;
    required string email = 4;
    optional string phone = 5;
    required string start_date = 6;
    required string end_date = 7;
    optional int32 processed = 8;
    required google.protobuf.Timestamp created_at = 9;
    optional google.protobuf.Timestamp updated_at = 10;
}