syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/tijanadmi/bookings_backend/pb";

message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
    string password = 5;
    string access_level = 6;
}

message CreateUserResponse {
    User user = 1;
}